Fix captcha image overflow
Bug: T358024
(cherry picked from commit 24ca43e5ca91ec4c40f604b4ea8ce5a59ca73a8d)

--- a/FancyCaptcha/resources/ext.confirmEdit.fancyCaptcha.less
+++ b/FancyCaptcha/resources/ext.confirmEdit.fancyCaptcha.less
@@ -8,6 +8,10 @@ layout, for normal CAPTCHA sizes. */
 	display: inline-block;
 }
 
+.fancycaptcha-image {
+	max-width: 100%;
+}
+
 .fancycaptcha-reload {
 	.background-image( 'images/refresh.svg' );
 	background-position: left center;
